--- a/style.css
+++ b/style.css
@@ -16,24 +16,29 @@ body {
 
 table {
 	border-collapse: collapse;
+	font-size: 10px;
 }
 
 th {
 	text-align: center;
 	padding: 0 15px;
+	font-size: 12px;
 }
 
 td {
-	font-size: 1.2em;
-	border: 1px solid rgb(2, 39, 85);
+	/*font-size: 1.2em;*/
+	border: 1px solid #CCC;
 	color: rgb(2, 39, 85);
-	padding: 3px 7px 2px 7px;
+	/*padding: 3px 7px 2px 7px;*/
 	text-align: center;
 }
 
+tr.class1 {
+	background-color: rgba(214, 230, 243, 0.4);
+}
 #roc {
 	float: left;
-	margin-right: 60px;
+	margin-right: 30px;
 }
 
 #chart {
@@ -62,4 +67,17 @@ tr.select {
 	font-family: "Menlo";
 	font-size: 16px;
 	float: right;
+}
+
+#workspace h3 {
+	font-family: Helvetica;
+	font-size: 18px;
+}
+
+td.ind {
+	border: none;
+	text-align: right;
+	color: #CCC;
+	padding-right: 2px;
+	background-color: white;
 }
